--- a/notebooks/gen_qsub.ipynb
+++ b/notebooks/gen_qsub.ipynb
@@ -2,267 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-16T01:08:55.620313Z",
+     "start_time": "2020-03-16T01:08:55.616106Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
     "import datetime\n",
-    "import calendar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def configuration_file(start_date='19990101', end_date='19990131', walltime=10):\n",
-    "    conf_txt = \"\"\"#!/bin/bash\n",
-    "#PBS -P kl02\n",
-    "#PBS -q express\n",
-    "#PBS -l walltime=10:00:00\n",
-    "#PBS -l mem=32GB\n",
-    "#PBS -l wd\n",
-    "#PBS -l ncpus=16\n",
-    "#PBS -lother=gdata1\n",
-    "conda activate radar\n",
-    "python radar_pack.py -s {sdate} -e {edate}\n",
-    "\"\"\".format(sdate=start_date, edate=end_date)    \n",
-    "    return conf_txt"
+    "import calendar\n",
+    "\n",
+    "from math import ceil"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199701\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199702\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199703\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199704\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199705\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199706\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199707\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199710\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199711\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1997/199712\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199801\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199802\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199803\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199804\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199805\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199806\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199807\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199810\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199811\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1998/199812\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199901\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199902\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199903\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199904\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199905\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199906\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199907\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199910\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199911\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//1999/199912\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200001\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200002\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200003\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200004\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200005\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200006\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200007\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200010\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200011\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2000/200012\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200101\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200102\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200103\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200104\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200105\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200106\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200107\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200110\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200111\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2001/200112\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200201\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200202\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200203\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200204\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200205\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200206\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200207\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200210\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200211\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2002/200212\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200301\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200302\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200303\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200304\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200305\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200306\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200307\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200310\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200311\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2003/200312\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200401\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200402\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200403\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200404\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200405\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200406\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200407\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200410\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200411\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2004/200412\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200501\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200502\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200503\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200504\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200505\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200506\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200507\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200510\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200511\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2005/200512\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200601\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200602\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200603\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200604\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200605\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200606\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200607\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200610\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200611\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2006/200612\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200701\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200702\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200703\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200704\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200705\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200706\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200707\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200710\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200711\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2007/200712\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200801\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200802\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200803\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200804\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200805\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200806\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200807\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200810\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200811\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2008/200812\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200901\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200902\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200903\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200904\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200905\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200906\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200907\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200910\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200911\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2009/200912\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201001\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201002\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201003\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201004\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201005\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201006\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201007\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201010\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201011\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2010/201012\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201101\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201102\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201103\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201104\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201105\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201106\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201107\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201110\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201111\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2011/201112\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201201\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201202\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201203\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201204\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201205\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201206\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201207\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201210\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201211\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2012/201212\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201301\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201302\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201303\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201304\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201305\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201306\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201307\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201310\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201311\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2013/201312\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201401\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201402\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201403\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201404\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201405\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201406\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201407\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201410\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201411\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2014/201412\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201501\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201502\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201503\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201504\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201505\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201506\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201507\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201510\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201511\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2015/201512\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201601\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201602\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201603\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201604\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201605\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201606\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201607\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201610\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201611\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2016/201612\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201701\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201702\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201703\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201704\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201705\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201706\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201707\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201710\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201711\n",
-      "/g/data/hj10/cpol_level_1a/v2019/ppi//2017/201712\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-16T01:08:55.830191Z",
+     "start_time": "2020-03-16T01:08:55.824918Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "for year in range(1997, 2018):\n",
+    "def configuration_file(start_date='19990101', end_date='19990131', walltime=10):\n",
+    "    conf_txt = f\"\"\"#!/bin/bash\n",
+    "#PBS -P kl02\n",
+    "#PBS -q normal\n",
+    "#PBS -l walltime={walltime}:00:00\n",
+    "#PBS -l mem=64GB\n",
+    "#PBS -l wd\n",
+    "#PBS -l ncpus=16\n",
+    "#PBS -lstorage=scratch/kl02\n",
+    "source activate radar\n",
+    "\n",
+    "python radar_pack.py -s {start_date} -e {end_date} -i /scratch/kl02/vhl548/cpol/v2018/ppi -o /scratch/kl02/vhl548/cpol/v2018/\n",
+    "\"\"\"\n",
+    "    return conf_txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-16T01:14:37.173179Z",
+     "start_time": "2020-03-16T01:14:31.829062Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for year in range(1999, 2018):\n",
     "    for month in range(1, 13):\n",
     "        if month > 7 and month < 10:\n",
     "            continue\n",
@@ -275,25 +70,27 @@
     "            season_nd = ((year + 1) % 100)\n",
     "        season = \"%02i%02i\" % (season_st, season_nd)\n",
     " \n",
-    "        indir = \"/g/data/hj10/cpol_level_1a/v2019/ppi/\"\n",
+    "        indir = \"/scratch/kl02/vhl548/cpol/v2018/ppi\"\n",
     "        indir += \"/%i/%i%02i\" % (year, year, month)\n",
     "        dirlist = glob.glob(indir + \"*\")\n",
-    "        print(indir)\n",
+    "        flist = glob.glob(indir + \"**/*.*\")\n",
+    "        \n",
     "        if len(dirlist) == 0:\n",
     "            continue\n",
+    "            \n",
+    "        wtime = (len(dirlist) / 3600)\n",
+    "        if wtime > 1:\n",
+    "            wtime = ceil(wtime)\n",
+    "        else:\n",
+    "            wtime = 1\n",
     "\n",
     "        _, ed = calendar.monthrange(year, month)\n",
     "        sdatestr = \"%i%02i%02i\" % (year, month, 1)\n",
     "        edatestr = \"%i%02i%02i\" % (year, month, ed)\n",
-    "        if month == 10 or month == 5:\n",
-    "            f = configuration_file(sdatestr, edatestr, 6)\n",
-    "        elif month == 11:\n",
-    "            f = configuration_file(sdatestr, edatestr, 8)\n",
-    "        else:\n",
-    "            f = configuration_file(sdatestr, edatestr, 10)\n",
+    "        f = configuration_file(sdatestr, edatestr, wtime)\n",
+    "        \n",
     "\n",
-    "\n",
-    "        fname = \"qgrid1b_%i%02i.pbs\" % (year, month)\n",
+    "        fname = \"../radar_grids/qgrid_%i%02i.pbs\" % (year, month)\n",
     "        with open(fname, 'w') as fid:\n",
     "            fid.write(f)"
    ]
@@ -322,7 +119,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
