--- a/notebooks/gen_qsub.ipynb
+++ b/notebooks/gen_qsub.ipynb
@@ -2,35 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T01:08:55.620313Z",
-     "start_time": "2020-03-16T01:08:55.616106Z"
+     "end_time": "2020-06-06T02:48:08.585760Z",
+     "start_time": "2020-06-06T02:48:08.580905Z"
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import glob\n",
-    "import datetime\n",
-    "import calendar\n",
+    "def configuration_file(year=1999, walltime=4):\n",
+    "    start_date = f'{year}0101'\n",
+    "    end_date = f'{year}1231'\n",
     "\n",
-    "from math import ceil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-16T01:08:55.830191Z",
-     "start_time": "2020-03-16T01:08:55.824918Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def configuration_file(start_date='19990101', end_date='19990131', walltime=10):\n",
     "    conf_txt = f\"\"\"#!/bin/bash\n",
     "#PBS -P kl02\n",
     "#PBS -q normal\n",
@@ -41,58 +25,27 @@
     "#PBS -lstorage=scratch/kl02\n",
     "source activate radar\n",
     "\n",
-    "python radar_pack.py -s {start_date} -e {end_date} -i /scratch/kl02/vhl548/cpol/v2018/ppi -o /scratch/kl02/vhl548/cpol/v2018/\n",
+    "python radar_pack.py -s {start_date} -e {end_date} -i /scratch/kl02/vhl548/cpol_level_1b/v2020/ppi/ -o /scratch/kl02/vhl548/cpol_level_1b/v2020/gridded/\n",
     "\"\"\"\n",
     "    return conf_txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-16T01:14:37.173179Z",
-     "start_time": "2020-03-16T01:14:31.829062Z"
+     "end_time": "2020-06-06T02:48:08.783903Z",
+     "start_time": "2020-06-06T02:48:08.768638Z"
     }
    },
    "outputs": [],
    "source": [
-    "for year in range(1999, 2018):\n",
-    "    for month in range(1, 13):\n",
-    "        if month > 7 and month < 10:\n",
-    "            continue\n",
-    "\n",
-    "        if month < 8:\n",
-    "            season_st = ((year - 1) % 100)\n",
-    "            season_nd = ((year) % 100)\n",
-    "        else:\n",
-    "            season_st = (year % 100)\n",
-    "            season_nd = ((year + 1) % 100)\n",
-    "        season = \"%02i%02i\" % (season_st, season_nd)\n",
-    " \n",
-    "        indir = \"/scratch/kl02/vhl548/cpol/v2018/ppi\"\n",
-    "        indir += \"/%i/%i%02i\" % (year, year, month)\n",
-    "        dirlist = glob.glob(indir + \"*\")\n",
-    "        flist = glob.glob(indir + \"**/*.*\")\n",
-    "        \n",
-    "        if len(dirlist) == 0:\n",
-    "            continue\n",
-    "            \n",
-    "        wtime = (len(dirlist) / 3600)\n",
-    "        if wtime > 1:\n",
-    "            wtime = ceil(wtime)\n",
-    "        else:\n",
-    "            wtime = 1\n",
-    "\n",
-    "        _, ed = calendar.monthrange(year, month)\n",
-    "        sdatestr = \"%i%02i%02i\" % (year, month, 1)\n",
-    "        edatestr = \"%i%02i%02i\" % (year, month, ed)\n",
-    "        f = configuration_file(sdatestr, edatestr, wtime)\n",
-    "        \n",
-    "\n",
-    "        fname = \"../radar_grids/qgrid_%i%02i.pbs\" % (year, month)\n",
-    "        with open(fname, 'w') as fid:\n",
-    "            fid.write(f)"
+    "for year in range(1999, 2008):\n",
+    "    txt = configuration_file(year)\n",
+    "    outfile = f\"../scripts/qgrid_{year}.pbs\"\n",
+    "    with open(outfile, 'w+') as fid:\n",
+    "        fid.write(txt)"
    ]
   },
   {
@@ -119,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   },
   "varInspector": {
    "cols": {
