--- a/notebooks/gen_qsub.ipynb
+++ b/notebooks/gen_qsub.ipynb
@@ -5,13 +5,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T02:48:08.585760Z",
-     "start_time": "2020-06-06T02:48:08.580905Z"
+     "end_time": "2020-06-28T03:48:17.265988Z",
+     "start_time": "2020-06-28T03:48:17.259282Z"
     }
    },
    "outputs": [],
    "source": [
-    "def configuration_file(year=1999, walltime=4):\n",
+    "def configuration_file(year=1999, walltime=8):\n",
+    "    if year == 2009:\n",
+    "        walltime=1\n",
     "    start_date = f'{year}0101'\n",
     "    end_date = f'{year}1231'\n",
     "\n",
@@ -25,7 +27,7 @@
     "#PBS -lstorage=scratch/kl02\n",
     "source activate radar\n",
     "\n",
-    "python radar_pack.py -s {start_date} -e {end_date} -i /scratch/kl02/vhl548/cpol_level_1b/v2020/ppi/ -o /scratch/kl02/vhl548/cpol_level_1b/v2020/gridded/\n",
+    "python radar_pack.py -s {start_date} -e {end_date} -i /scratch/kl02/vhl548/cpol_level_1b/v2020/v2020/ppi/ -o /scratch/kl02/vhl548/cpol_level_1b/v2020/v2020/gridded/\n",
     "\"\"\"\n",
     "    return conf_txt"
    ]
@@ -35,13 +37,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T02:48:08.783903Z",
-     "start_time": "2020-06-06T02:48:08.768638Z"
+     "end_time": "2020-06-28T03:48:18.585606Z",
+     "start_time": "2020-06-28T03:48:18.556484Z"
     }
    },
    "outputs": [],
    "source": [
-    "for year in range(1999, 2008):\n",
+    "for year in range(2009, 2018):\n",
+    "    if year == 2014:\n",
+    "        continue\n",
     "    txt = configuration_file(year)\n",
     "    outfile = f\"../scripts/qgrid_{year}.pbs\"\n",
     "    with open(outfile, 'w+') as fid:\n",
