--- a/notebooks/gen_qsub.ipynb
+++ b/notebooks/gen_qsub.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T03:48:17.265988Z",
-     "start_time": "2020-06-28T03:48:17.259282Z"
+     "end_time": "2020-09-01T04:15:00.406369Z",
+     "start_time": "2020-09-01T04:15:00.372053Z"
     }
    },
    "outputs": [],
    "source": [
-    "def configuration_file(year=1999, walltime=8):\n",
+    "def configuration_file(year=1999, walltime=10):\n",
     "    if year == 2009:\n",
-    "        walltime=1\n",
+    "        walltime=2\n",
     "    start_date = f'{year}0101'\n",
     "    end_date = f'{year}1231'\n",
     "\n",
@@ -21,30 +21,30 @@
     "#PBS -P kl02\n",
     "#PBS -q normal\n",
     "#PBS -l walltime={walltime}:00:00\n",
-    "#PBS -l mem=64GB\n",
+    "#PBS -l mem=128GB\n",
     "#PBS -l wd\n",
     "#PBS -l ncpus=16\n",
-    "#PBS -lstorage=scratch/kl02\n",
+    "#PBS -lstorage=scratch/hj10+gdata/hj10+scratch/kl02\n",
     "source activate radar\n",
     "\n",
-    "python radar_pack.py -s {start_date} -e {end_date} -i /scratch/kl02/vhl548/cpol_level_1b/v2020/v2020/ppi/ -o /scratch/kl02/vhl548/cpol_level_1b/v2020/v2020/gridded/\n",
+    "python radar_pack.py -s {start_date} -e {end_date} -i /g/data/hj10/cpol/cpol_level_1b/v2020/ppi/ -o /scratch/kl02/vhl548/cpol_level_1b/v2020/gridded/\n",
     "\"\"\"\n",
     "    return conf_txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T03:48:18.585606Z",
-     "start_time": "2020-06-28T03:48:18.556484Z"
+     "end_time": "2020-09-01T04:15:04.388842Z",
+     "start_time": "2020-09-01T04:15:04.359483Z"
     }
    },
    "outputs": [],
    "source": [
-    "for year in range(2009, 2018):\n",
-    "    if year == 2014:\n",
+    "for year in range(1999, 2018):\n",
+    "    if year == 2008:\n",
     "        continue\n",
     "    txt = configuration_file(year)\n",
     "    outfile = f\"../scripts/qgrid_{year}.pbs\"\n",
@@ -76,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "varInspector": {
    "cols": {
