--- a/notebooks/gen_qsub.ipynb
+++ b/notebooks/gen_qsub.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-01T04:15:00.406369Z",
-     "start_time": "2020-09-01T04:15:00.372053Z"
+     "end_time": "2020-09-23T01:28:41.908904Z",
+     "start_time": "2020-09-23T01:28:41.905804Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-23T01:28:42.446464Z",
+     "start_time": "2020-09-23T01:28:42.441424Z"
     }
    },
    "outputs": [],
@@ -34,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-01T04:15:04.388842Z",
@@ -57,7 +72,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def configuration_file2(indir, outdir):\n",
+    "    conf_txt = f\"\"\"#!/bin/bash\n",
+    "#PBS -P kl02\n",
+    "#PBS -q normal\n",
+    "#PBS -l walltime=5:00:00\n",
+    "#PBS -l mem=128GB\n",
+    "#PBS -l wd\n",
+    "#PBS -l ncpus=16\n",
+    "#PBS -lstorage=scratch/hj10+gdata/hj10+scratch/kl02\n",
+    "source activate radar\n",
+    "\n",
+    "if [ ! -d \"{outdir}\" ]\n",
+    "then \n",
+    "    mkdir {outdir}\n",
+    "fi\n",
+    "\n",
+    "python radar_dir.py -i {indir} -o {outdir}\n",
+    "\"\"\"\n",
+    "    return conf_txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dirlist = glob.glob(\"/g/data/hj10/admin/opol/level_1b/ppi/*\")\n",
+    "dirnames = [os.path.basename(d) for d in dirlist]\n",
+    "OUTPATH = \"/g/data/hj10/admin/incoming/opol/gridded/\"\n",
+    "outdirs = [OUTPATH + d for d in dirnames]\n",
+    "\n",
+    "for i, o in zip(dirlist, outdirs):\n",
+    "    conf = configuration_file(i, o)\n",
+    "    suffix = os.path.basename(o)    \n",
+    "    outfile = f\"/home/548/vhl548/projects/RADAR_codes/radar_grids/scripts/qgrid_{suffix}.pbs\"\n",
+    "    with open(outfile, \"w+\") as fid:\n",
+    "        fid.write(conf)"
+   ]
   }
  ],
  "metadata": {
