--- a/notebooks/Example - grid radar data.ipynb
+++ b/notebooks/Example - grid radar data.ipynb
@@ -2,77 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T01:26:28.082716Z",
-     "start_time": "2020-06-06T01:26:25.819672Z"
+     "end_time": "2020-11-27T00:02:49.861366Z",
+     "start_time": "2020-11-27T00:02:47.529168Z"
     }
    },
    "outputs": [],
    "source": [
+    "import re\n",
     "import glob\n",
+    "import tqdm\n",
     "import warnings\n",
     "import traceback\n",
     "\n",
     "import radar_grids\n",
-    "\n",
-    "import dask\n",
-    "import dask.bag as db\n",
-    "from dask.diagnostics import ProgressBar\n",
     "\n",
     "warnings.simplefilter('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T01:26:28.087037Z",
-     "start_time": "2020-06-06T01:26:28.084323Z"
+     "end_time": "2020-11-27T00:02:49.866613Z",
+     "start_time": "2020-11-27T00:02:49.863360Z"
     }
    },
    "outputs": [],
    "source": [
-    "def process(infile):\n",
-    "    try:\n",
-    "        radar_grids.gridding(infile, \"/scratch/kl02/vhl548/cpol_level_1b/v2020/gridded/\")\n",
-    "    except Exception:\n",
-    "        traceback.print_exc()\n",
-    "        print(f\"problem with {infile}\")\n",
-    "        \n",
+    "def buffer(infile: str) -> None:\n",
+    "    \"\"\"\n",
+    "    It calls the production line and manages it. Buffer function that is used\n",
+    "    to catch any problem with the processing line without screwing the whole\n",
+    "    multiprocessing stuff.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ===========\n",
+    "    infile: str\n",
+    "        Name of the input radar file.    \n",
+    "    \"\"\"\n",
+    "    radar_grids.标准映射(infile, \"/scratch/kl02/vhl548/cpol/corrected\", prefix=\"twp10cpolgrid\", na_standard=True)\n",
+    "\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T02:33:10.989471Z",
-     "start_time": "2020-06-06T02:33:10.463717Z"
+     "end_time": "2020-11-27T00:02:49.876237Z",
+     "start_time": "2020-11-27T00:02:49.872715Z"
     }
    },
    "outputs": [],
    "source": [
-    "flist = sorted(glob.glob('/scratch/kl02/vhl548/cpol_level_1b/v2020/ppi/1999/**/*.nc'))"
+    "flist = sorted(glob.glob('/g/data/hj10/cpol/cpol_level_1b/v2020/ppi/2010/20100430/*.nc'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-06T01:38:08.943822Z",
-     "start_time": "2020-06-06T01:27:28.922273Z"
+     "end_time": "2020-11-27T00:02:49.880720Z",
+     "start_time": "2020-11-27T00:02:49.877655Z"
     }
    },
    "outputs": [],
    "source": [
-    "bag = db.from_sequence(flist).map(process)\n",
-    "with ProgressBar():\n",
-    "    rslt = bag.compute()"
+    "corrupted = [\n",
+    "    '20100430.110000',\n",
+    "    '20100430.113000',\n",
+    "    '20100430.105000',\n",
+    "    '20100430.094000',\n",
+    "    '20100430.124000',\n",
+    "    '20100430.112000',\n",
+    "    '20100430.095000',\n",
+    "    '20100430.104000',\n",
+    "    '20100430.125000',\n",
+    "    '20100430.115000',\n",
+    "    '20100430.122000',\n",
+    "    '20100430.092000',\n",
+    "    '20100430.103000',\n",
+    "    '20100430.114000',\n",
+    "    '20100430.123000',\n",
+    "    '20100430.102000',\n",
+    "    '20100430.093000',\n",
+    "    '20100430.101000',\n",
+    "    '20100430.120000',\n",
+    "    '20100430.121000'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-27T00:02:49.887066Z",
+     "start_time": "2020-11-27T00:02:49.882202Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gd = [f for f in flist if re.findall(\"[0-9]{8}.[0-9]{6}\", f)[0] in corrupted]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-27T00:04:41.631375Z",
+     "start_time": "2020-11-27T00:02:49.888520Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da034934c90b43359860b9ec1f4e87f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=20.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for f in tqdm.tqdm_notebook(gd):\n",
+    "    buffer(f)"
    ]
   },
   {
@@ -99,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "varInspector": {
    "cols": {
